# Loo-Cast

./: .gitignore  AGENTS.md  AGENT_TODO.md  Cargo.toml  NUKE_CARGO_REG.ps1  README.md  build.ps1  build.sh  build_debug.ps1  build_release.ps1  cloc.sh  cloc_basemod.ps1  cloc_engine.ps1  dev_cloc  format_code.ps1  packages.config  run.ps1  run.sh  run_debug.ps1  run_release.ps1  rustc-ice-2026-03-07T23_39_25-42441.txt  rustc-ice-2026-03-08T12_42_52-17131.txt  rustc-ice-2026-03-10T19_48_27-38436.txt  rustc-ice-2026-03-10T21_01_04-58307.txt  rustc-ice-2026-03-10T21_11_40-61057.txt  rustc-ice-2026-03-10T21_15_03-62968.txt  rustc-ice-2026-03-10T21_15_37-63119.txt  rustc-ice-2026-03-28T20_44_20-106059.txt  rustc-ice-2026-03-30T12_44_15-21941.txt  steam_appid.txt.bak  visualize_repo.ps1  visualize_repo.sh
base_mod/: Cargo.toml  README.md
base_mod/src/: lib.rs  mod.lua
base_mod/src/camera/: tasks.lua
base_mod/src/chunk/: systems.lua  tasks.lua
base_mod/src/chunk_actor/: tasks.lua
base_mod/src/chunk_loader/: hooks.lua  mod.lua  systems.lua  tasks.lua
base_mod/src/core/: systems.lua  tasks.lua
base_mod_api/: Cargo.toml  README.md
base_mod_api/src/: lib.rs
base_mod_api/src/backend/: mod.rs
core_engine/: Cargo.toml  README.md
core_engine/assets/configs/: config.toml
core_engine/src/: constants.rs  functions.rs  lib.rs  main.rs  statics.rs  types.rs
core_engine/src/camera/: mod.rs  resources.rs  systems.rs  types.rs  workflows.rs
core_engine/src/chunk/: action_intent_resolution.rs  bundles.rs  components.rs  enums.rs  errors.rs  hooks.rs  intent.rs  intent_resolution.rs  mod.rs  resources.rs  systems.rs  types.rs  workflows.rs
core_engine/src/chunk_actor/: components.rs  mod.rs
core_engine/src/chunk_debug/: mod.rs
core_engine/src/chunk_loader/: components.rs  mod.rs  observers.rs  resources.rs  systems.rs  workflows.rs
core_engine/src/config/: enums.rs  mod.rs  statics.rs  structs.rs
core_engine/src/core/: functions.rs  mod.rs  resources.rs  run_conditions.rs  statics.rs  types.rs  workflows.rs
core_engine/src/debug/: components.rs  functions.rs  mod.rs  observers.rs  resources.rs  systems.rs  types.rs  workflows.rs
core_engine/src/entity/: functions.rs  mod.rs  statics.rs  systems.rs
core_engine/src/follower/: components.rs  events.rs  hooks.rs  mod.rs  observers.rs  systems.rs
core_engine/src/game/: mod.rs  resources.rs  run_conditions.rs  systems.rs  types.rs
core_engine/src/gpu/: mod.rs  workflows.rs
core_engine/src/input/: mod.rs  states.rs  systems.rs
core_engine/src/log/: arena.rs  functions.rs  location_tree.rs  mod.rs  resources.rs  span_tree.rs  statics.rs  storage.rs  systems.rs  traits.rs  types.rs
core_engine/src/log_NEW/: mod.rs  resources.rs  statics.rs  traits.rs  types.rs
core_engine/src/player/: bundles.rs  components.rs  mod.rs  systems.rs  types.rs  workflows.rs
core_engine/src/routine/: functions.rs
core_engine/src/time/: errors.rs  functions.rs  mod.rs  resources.rs  run_conditions.rs  statics.rs  systems.rs  types.rs
core_engine/src/typed_dag/: example.rs  mod.rs
core_engine/src/ui/: mod.rs
core_engine/src/utils/: components.rs  functions.rs  mod.rs  premium_box.rs
core_engine/src/window/: mod.rs  systems.rs
core_engine/src/workflow/: channels.rs  composite_workflow_context.rs  events.rs  functions.rs  instance.rs  mod.rs  request.rs  resources.rs  response.rs  stage.rs  statics.rs  systems.rs  traits.rs  types.rs
core_mod/: Cargo.toml  README.md
core_mod/assets/configs/: config.toml
core_mod/assets/metric/: test_metric.rhai
core_mod/assets/mod/: loo_cast_base.rhai
core_mod/assets/modpacks/: loo_cast_test.rhai
core_mod/assets/mods/: loo_cast_test.rhai
core_mod/assets/phenomenon/: test_phenomenon.rhai
core_mod/assets/phenomenon_realizer/: 35.rhai
core_mod/assets/scale/: 35.rhai
core_mod/src/: lib.rs
core_mod/src/camera/: types.rs
core_mod/src/chunk/: hooks.rs  mod.rs
core_mod/src/chunk_loader/: components.rs
core_mod/src/core/: mod.rs
core_mod/src/debug/: functions.rs  systems.rs
core_mod/src/follower/: systems.rs
core_mod/src/logging/: resources.rs  statics.rs
core_mod/src/player/: systems.rs  workflows.rs
core_mod/src/script_channels/: mod.rs
core_mod/src/time/: statics.rs  systems.rs
core_mod/src/workflow/: channels.rs  instance.rs  stage.rs  statics.rs  traits.rs  types.rs
core_mod_api/: Cargo.toml  README.md
core_mod_api/src/: lib.rs
core_mod_macros/: Cargo.toml  README.md
core_mod_macros/src/: composite_workflow.rs  lib.rs
loo_cast_alpha/: Cargo.toml  build.ps1  build.sh  clean_sdk.ps1  clean_sdk.sh  cloc.sh  run.ps1  run.sh  visualize_repo.sh
loo_cast_alpha/.cargo/: config.toml
loo_cast_alpha/_local_shenanigans/: legacy_corpus_register.md
loo_cast_alpha/docs/: AI_COLLABORATION.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_DRAFT.md  CONTRACTS.md  CONTRIBUTING.md  DECISIONS.md  MIGRATIONS_DRAFT.md  NOW.md  README.md  RUSTDOC_BASELINE.md  WORKFLOWS.md  alpha_doctrine_draft.md  draft_phase_buckets.md  launcher_v1_spec.md  portable_mod_sdk_plan.md  repo_split_plan.md  sdk_first_bootstrap_manual.md
loo_cast_alpha/tools/: scalar_constants.txt  scalar_core_constants_generator.rs  scalar_power_lattice_generator.rs  scalar_tool.py
loo_cast_legacy/: AGENTS.md  Cargo.toml  build.ps1  build.sh  steam_appid.txt  visualize_repo.sh
loo_cast_legacy/base_mod/: README.md
loo_cast_legacy/base_mod_api/: Cargo.toml  README.md
loo_cast_legacy/core_engine/: Cargo.toml  Operations.txt
loo_cast_legacy/core_engine_macros/: Cargo.toml
loo_cast_legacy/core_mod/: Cargo.toml
loo_cast_legacy/core_mod_api/: README.md
loo_cast_legacy/core_mod_macros/: Cargo.toml  README.md
loo_cast_legacy/documents/: README.md  TODO.txt
spacetime_engine/: Cargo.toml  api_overview.txt  api_overview.txt.bak
spacetime_engine/scripts/: main.lua  maybeWeUseXMLSomehow.xml
spacetime_engine/src/: commands.rs  constants.rs  decl_macros.rs  errors.rs  lib.rs  main.rs  oneshot_systems.rs  routines.rs  singletons.rs  statics.rs  structs.rs  systems.rs  traits.rs  wrappers.rs
(+5769 files in other folders)
