[workspace]
members = [
  "core_engine",
  "core_mod_api",
  "core_mod_macros",
  "core_mod",
  "core_mod_reflect",
  "base_mod",
  "base_mod_api",
  "base_mod_macros",
  "bevy_consumable_event",
]

[profile.dev]
opt-level = 1
debug = false
incremental = true
lto = false

[profile.fastdev]
inherits = "dev"
lto = "thin"

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
incremental = false
lto = true
