[package]
name = "base_mod"
version = "0.1.0"
edition = "2024"

[features]
default = [
    "allow_premium_box"
]
init_api = []
allow_premium_box = ["base_mod_api/allow_premium_box"]

[lib]
crate-type = ["cdylib"]

[dependencies]
core_mod_core_macros = { path = "../core_mod_core_macros" }

base_mod_api = { path = "../base_mod_api" }
base_mod_macros = { path = "../base_mod_macros" }
