[package]
name = "core_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "core_engine"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "core_engine"
path = "src/main.rs"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[dependencies]
core_engine_macros = { path = "../core_engine_macros" }
bevy = "0.14.2"
bevy_egui = "0.29.0"
bevy_rapier2d = { version = "0.27.0", features = [ "debug-render-2d", "serde-serialize" ] }
mlua = { version = "0.6.1", features = ["vendored", "lua54"] }
rand = "0.8.5"
noise = "0.9"
image = "0.25.1"
serde = "1.0.185"
serde_json = "1.0"
futures = "0.3"
num-bigint = "0.4"
num-traits = "0.2"
lazy_static = "1.4"
queues = "1.0.2"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
glam = "0.27.0"
tokio = { version = "1.0", features = ["full"] }
iyes_perf_ui = "0.3.0"
toml = "0.8.19"
crossbeam-channel = "0.5.14"
bevy_consumable_event = "0.4.0"
bytemuck = "1.21.0"
thiserror = "2.0.12"
once_cell = "1.20.3"
dyn-clone = "1.0.19"
anymap = "0.12.1"
uuid = "1.16.0"
dashmap = "6.1.0"
egui = "0.29"
parking_lot = "0.12.1"
crossbeam = "0.8"