[package]
name = "core_mod"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "allow_premium_box"
]
init_api = []
allow_premium_box = ["core_mod_api/allow_premium_box"]
bevy_dynamic_linking = ["core_mod_api/bevy_dynamic_linking"]

[dependencies]
core_mod_api = { path = "../core_mod_api" }
core_mod_macros = { path = "../core_mod_macros" }
paste = "1.0.15"