[package]
name = "core_mod_api"
version = "0.1.0"
edition = "2024"

[features]
default = [
    "allow_premium_box"
]
allow_premium_box = []
bevy_dynamic_linking = ["bevy/dynamic_linking"]

[target.'cfg(debug_assertions)'.dependencies]
bevy_dylib = "0.18.0"

[dependencies]
core_mod_core_macros = { path = "../core_mod_core_macros" }
core_mod_macros = { path = "../core_mod_macros" }
core_mod_core = { path = "../core_mod_core" }

heck = { workspace = true }
inventory = { workspace = true }
once_cell = { workspace = true }
paste = { workspace = true }
rhai = { workspace = true }

bevy = { version = "0.18.0", default-features = false, features = [
    "std",
    "async_executor",
    "android-game-activity",
    "android_shared_stdcxx",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_input_focus",
    "bevy_log",
    # "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_gizmos_render",
    "bevy_sprite_render",
    "bevy_ui_render",
    # "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    # "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "gltf_animation",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
    "zstd_rust",
] }
bevy_egui = { version = "0.39.0" }
bevy-inspector-egui = "0.36.0"
# bevy_rapier2d = { version = "0.32.0", features = ["debug-render-2d", "serde-serialize"] } # Stuck on bevy 0.17.3
bevy_consumable_message = { path = "../bevy_consumable_message" }
egui = "0.33.3"
egui_dock = "0.18.0"
# iyes_perf_ui = "0.5" # Stuck on bevy 0.16.0
rand = "0.8.5"
noise = "0.9"
image = "0.25.1"
serde = "1.0.185"
serde_json = "1.0"
futures = "0.3"
num-bigint = "0.4"
num-traits = "0.2"
lazy_static = "1.4"
queues = "1.0.2"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
glam = "0.27.0"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
console-subscriber = "0.4.1"
pin-project-lite = "0.2.16"
toml = "0.8.19"
crossbeam = "0.8"
crossbeam-channel = "0.5.14"
bytemuck = "1.21.0"
thiserror = "2.0.12"
dyn-clone = "1.0.19"
anymap = "0.12.1"
uuid = { version = "1.12.0", features = ["v4"] }
dashmap = "6.1.0"
parking_lot = "0.12.1"
radsort = "0.1"
wgpu = "27.0.1"
