[package]
name = "core_mod_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
core_mod_core = { path = "../core_mod_core" }

heck = { workspace = true }
paste = { workspace = true }
thiserror = { workspace = true }

syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"