[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
heck = "0.5.0"
inventory = "0.3.24"
once_cell = "1.21.4"
paste = "1.0.15"
rhai = { version = "1.24.0", features = ["sync", "internals", "unchecked"] }
thiserror = "2.0.18"

[profile.dev]
opt-level = 1
debug = false
incremental = true
lto = false

[profile.fastdev]
inherits = "dev"
lto = "thin"

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
incremental = false
lto = true

[profile.dev.package."*"]
opt-level = 3

[profile.fastdev.package."*"]
opt-level = 1
