[workspace]
resolver = "3"
members = [
  "core_engine",
  
  "bevy_consumable_message",

  "core_mod",
  "core_mod_api",
  "core_engine_macros",
  "core_mod_macros",

  "base_mod",
  "base_mod_api",
  "base_mod_macros",
]

[workspace.dependencies]
heck = "0.4"
inventory = "0.3.21"
once_cell = "1.20.3"
paste = "1.0.15"
rhai = { version = "1.23.6", features = ["sync", "internals", "unchecked"] }
thiserror = "2.0.12"

[profile.dev]
opt-level = 1
debug = false
incremental = true
lto = false

[profile.fastdev]
inherits = "dev"
lto = false

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
incremental = false
lto = true

[profile.dev.package."*"]
opt-level = 3

[profile.fastdev.package."*"]
opt-level = 1
