[package]
name = "spacetime_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "spacetime_engine"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "spacetime_engine"
path = "src/main.rs"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11.2" }
bevy_rapier2d = { version = "0.22.0", features = [ "debug-render-2d" ] }
serde = "1.0.185"
serde_json = "1.0"
futures = "0.3"
num-bigint = "0.4"
num-traits = "0.2"
lazy_static = "1.4"
queues = "1.0.2"
log = "0.4"
libloading = "0.8.1"
mlua = { version = "0.9.5", features = [ "lua51" ]}
