[package]
name = "spacetime_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "spacetime_engine"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "spacetime_engine"
path = "src/main.rs"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.2"
bevy_rapier2d = { version = "0.26.0", features = [ "debug-render-2d", "serde-serialize" ] }
rand = "0.8.5"
noise = "0.9"
image = "0.25.1"
serde = "1.0.185"
serde_json = "1.0"
futures = "0.3"
num-bigint = "0.4"
num-traits = "0.2"
lazy_static = "1.4"
queues = "1.0.2"
log = "0.4"
glam = "0.27.0"
