[package]
name = "core_mod"
version = "0.1.0"
edition = "2024"

[features]
default = [
    "allow_premium_box"
]
init_api = []
allow_premium_box = ["core_mod_api/allow_premium_box"]

[dependencies]
core_mod_api = { path = "../core_mod_api" }
core_engine_macros = { path = "../core_engine_macros" }
paste = "1.0.15"