[package]
name = "base_mod"
version = "0.1.0"
edition = "2024"

[features]
default = ["allow_premium_box"]
init_api = []
allow_premium_box = ["core_mod/allow_premium_box"]

[dependencies]
base_mod_macros = { path = "../base_mod_macros" }
core_engine_macros = { path = "../core_engine_macros" }
core_mod = { path = "../core_mod" }

rhai = { workspace = true }
once_cell = { workspace = true }
inventory = { workspace = true }

bevy_ecs = "0.18.0"
bevy_reflect = "0.18.0"
bevy_state = "0.18.0"
bevy_egui = { version = "0.39.0" }
bevy-inspector-egui = "0.36.0"
egui = "0.33.3"
egui_dock = "0.18.0"
wgpu = "27.0.1"
tracing = "0.1"
thiserror = "2.0.12"
crossbeam-channel = "0.5.14"
dyn-clone = "1.0.19"
bytemuck = "1.21.0"
uuid = { version = "1.12.0", features = ["v4"] }
