[package]
name = "base_mod"
version = "0.1.0"
edition = "2024"

[features]
default = ["allow_premium_box"]
init_api = []
allow_premium_box = ["core_mod/allow_premium_box"]

[dependencies]
base_mod_macros = { path = "../base_mod_macros" }
core_engine_macros = { path = "../core_engine_macros" }
core_mod = { path = "../core_mod" }

rhai = { workspace = true }
once_cell = { workspace = true }
inventory = { workspace = true }
