[package]
name = "base_mod_internals"
version = "0.1.0"
edition = "2024"

[dependencies]
base_mod_macros = { path = "../base_mod_macros" }
base_mod_shared = { path = "../base_mod_shared" }
bevy = { workspace = true }
rand = "0.10.1"
num-integer = "0.1.46"

[[bench]]
name = "math_scalar_bench"
path = "benches/math/scalar.rs"
harness = true