[package]
name = "core_mod"
version = "0.1.0"
edition = "2024"

[features]
default = ["allow_premium_box"]
init_api = []
allow_premium_box = []

[target.'cfg(not(target_os = "windows"))'.dependencies]
bevy_dylib = "0.18.0"
bevy = { version = "0.18.0", default-features = false, features = [
    "dynamic_linking",
    "std",
    "async_executor",
    "android-game-activity",
    "android_shared_stdcxx",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_input_focus",
    "bevy_log",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_gizmos_render",
    "bevy_sprite_render",
    "bevy_ui_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "gltf_animation",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
    "zstd_rust",
] }

[target.'cfg(target_os = "windows")'.dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "std",
    "async_executor",
    "android-game-activity",
    "android_shared_stdcxx",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_input_focus",
    "bevy_log",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_gizmos_render",
    "bevy_sprite_render",
    "bevy_ui_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "gltf_animation",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
    "zstd_rust",
] }

[dependencies]
core_engine_macros = { path = "../core_engine_macros" }
bevy_consumable_message = { path = "../bevy_consumable_message" }

heck = { workspace = true }
inventory = { workspace = true }
once_cell = { workspace = true }
paste = { workspace = true }
rhai = { workspace = true }

bevy_ecs = "0.18.0"
bevy_asset = "0.18.0"
bevy_image = "0.18.0"
bevy_reflect = "0.18.0"
bevy_render = "0.18.0"
bevy_state = "0.18.0"
bevy_egui = { version = "0.39.0" }
bevy-inspector-egui = "0.36.0"
bevy_rapier3d = { version = "0.33.0", features = ["serde-serialize"] }
egui = "0.33.3"
egui_dock = "0.18.0"
rand = "0.8.5"
noise = "0.9"
image = "0.25.1"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
num-bigint = "0.4"
num-traits = "0.2"
lazy_static = "1.4"
queues = "1.0.2"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
glam = "0.27.0"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
console-subscriber = "0.4.1"
pin-project-lite = "0.2.16"
toml = "0.8.19"
crossbeam = "0.8"
crossbeam-channel = "0.5.14"
bytemuck = "1.21.0"
encase = "0.12.0"
thiserror = "2.0.12"
dyn-clone = "1.0.19"
anymap = "0.12.1"
uuid = { version = "1.12.0", features = ["v4"] }
dashmap = "6.1.0"
parking_lot = "0.12.1"
radsort = "0.1"
wgpu = "27.0.1"
