[package]
name = "core_mod"
version = "0.1.0"
edition = "2024"

[features]
default = ["allow_premium_box"]
init_api = []
allow_premium_box = []

[dependencies]
core_engine_macros = { path = "../core_engine_macros" }
bevy_consumable_message = { path = "../bevy_consumable_message" }

heck = { workspace = true }
inventory = { workspace = true }
once_cell = { workspace = true }
paste = { workspace = true }
rhai = { workspace = true }
